--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             </div>
             <div class="slide-container">
                 <div class="slide-img">
-                    <img src="/asset/asset 3.png" alt="">
+                    <img src="/.asset/asset 3.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 4.png" alt="">
+                    <img src="/.asset/asset 4.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 5.png" alt="">
+                    <img src="/.asset/asset 5.png" alt="">
                 </div>
                 <div class="slide-img">
                     <img src="/asset/asset 6.png" alt="">
