--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                 design decisions.
             </div>
             <div class="logos flex">
-                <img class="logo" src="/asset/asset 3.png" alt="">
-                <img class="logo" src="/asset/asset 4.png" alt="">
-                <img class="logo" src="/asset/asset 5.png" alt="">
-                <img class="logo" src="/asset/asset 6.png" alt="">
-                <img class="logo" src="/asset/asset 7.png" alt="">
-                <img class="logo" src="/asset/asset 8.svg" alt="">
-                <img class="logo" src="/asset/asset 9.png" alt="">
+                <img class="logo" src="asset/asset 3.png" alt="">
+                <img class="logo" src="asset/asset 4.png" alt="">
+                <img class="logo" src="asset/asset 5.png" alt="">
+                <img class="logo" src="asset/asset 6.png" alt="">
+                <img class="logo" src="asset/asset 7.png" alt="">
+                <img class="logo" src="asset/asset 8.svg" alt="">
+                <img class="logo" src="asset/asset 9.png" alt="">
             </div>
         </div>
     </section> -->
@@ -87,53 +87,53 @@
             </div>
             <div class="slide-container">
                 <div class="slide-img">
-                    <img src="/.asset/asset 3.png" alt="">
+                    <img src="asset/asset 3.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/.asset/asset 4.png" alt="">
+                    <img src="asset/asset 4.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/.asset/asset 5.png" alt="">
+                    <img src="asset/asset 5.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 6.png" alt="">
+                    <img src="asset/asset 6.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 7.png" alt="">
+                    <img src="asset/asset 7.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img class="godaddy" src="/asset/asset 8.svg" alt="">
+                    <img class="godaddy" src="asset/asset 8.svg" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 9.png" alt="">
+                    <img src="asset/asset 9.png" alt="">
                 </div>
                 <!-- again same images  -->
                 <div class="slide-img">
-                    <img src="/asset/asset 3.png" alt="">
+                    <img src="asset/asset 3.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 4.png" alt="">
+                    <img src="asset/asset 4.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 5.png" alt="">
+                    <img src="asset/asset 5.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 6.png" alt="">
+                    <img src="asset/asset 6.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 7.png" alt="">
+                    <img src="asset/asset 7.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img class="godaddy" src="/asset/asset 8.svg" alt="">
+                    <img class="godaddy" src="asset/asset 8.svg" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 9.png" alt="">
+                    <img src="asset/asset 9.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 3.png" alt="">
+                    <img src="asset/asset 3.png" alt="">
                 </div>
                 <div class="slide-img">
-                    <img src="/asset/asset 4.png" alt="">
+                    <img src="asset/asset 4.png" alt="">
                 </div>
                 
             </div>
@@ -195,7 +195,7 @@
     <section class="big-feature-sectin">
         <div class="container flex big-feature-container">
             <div class="feature-img">
-                <img src="/asset/asset 17.png" alt="">
+                <img src="asset/asset 17.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for </h4>
@@ -223,7 +223,7 @@
     <section class="big-feature-sectin">
         <div class="container flex big-feature-container" id="second-big-feature">
             <div class="feature-img">
-                <img src="/asset/asset 20.png" alt="">
+                <img src="asset/asset 20.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Optimisation for</h4>
@@ -251,7 +251,7 @@
     <section class="big-feature-sectin">
         <div class="container flex big-feature-container">
             <div class="feature-img">
-                <img src="/asset/asset 23.png" alt="">
+                <img src="asset/asset 23.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Easier decision making for</h4>
